--- a/src/app/modules/appconfigdata/configboard/configboard.component.html
+++ b/src/app/modules/appconfigdata/configboard/configboard.component.html
@@ -1,33 +1,19 @@
 <mat-card>
-    <mat-card-title>Report Configuration</mat-card-title>
+    <mat-card-title>Report Configuration </mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
-    <mat-card-content style="margin:5px;max-height: inherit;">
-            <!-- <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayout.xs="column" fxLayoutGap="30px"> -->
-                <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChanged($event)" mat-stretch-tabs>
-                  
-                    <mat-tab>
-                        <ng-template mat-tab-label>
-                            <mat-icon>change_history
-                            </mat-icon> Report Name
-                        </ng-template>
-                        <app-userconfigreportname></app-userconfigreportname>
-                    </mat-tab>                    
-                    <mat-tab>
-                        <ng-template mat-tab-label>
-                            <mat-icon>change_history
-                            </mat-icon> Report Column
-                        </ng-template>
-                        <app-userreportconfigcolumns></app-userreportconfigcolumns>
-                    </mat-tab>
-                    <mat-tab>
-                        <ng-template mat-tab-label>
-                            <mat-icon>change_history
-                            </mat-icon> Variable Config
-                        </ng-template>
-                        <app-variable-config></app-variable-config>
-                    </mat-tab> 
-                </mat-tab-group>
-            <!-- </div> -->
-       
+    <mat-card-content>
+        <div style="margin:5px">
+            <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
+                <mat-tab *ngFor="let component of components;let indx=index">
+                    <ng-template mat-tab-label>
+                        <mat-icon>{{tabNames[indx].faIcon}}</mat-icon> {{tabNames[indx].label}}
+                    </ng-template>
+                    <ng-template matTabContent>
+                        <div #container></div>
+                    </ng-template>
+                </mat-tab>
+            </mat-tab-group>
+           
+        </div>
     </mat-card-content>
 </mat-card>
