--- a/src/app/modules/appconfigdata/userconfigreportname/userconfigreportname.component.html
+++ b/src/app/modules/appconfigdata/userconfigreportname/userconfigreportname.component.html
@@ -4,106 +4,63 @@
     </div>
     <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <alert></alert>
-    <div style="padding: 15px" fxLayout="row wrap">
-        <div style="width: 100%;">
-            <form [formGroup]="searchForm" fxLayout="row" fxLayoutAlign="space-between center">
-                <div fxLayout="row" fxLayoutGap="15px" fxLayoutAlign="space-around center">
-                    <mat-form-field appearance="outline" style="margin-right:15px;">
+    <form [formGroup]="searchForm">
+        <div style="display: flex;flex-direction: row;width: 100%;">
+            <!-- <mat-form-field appearance="outline" style="margin-right:15px;">
                         <mat-label>Application</mat-label>
                         <mat-select formControlName="searchApplicationId" (selectionChange)="GetAvailableReportNames()">
                             <mat-option *ngFor="let option of Applications" [value]="option.applicationId">
                                 {{option.applicationName}}
                             </mat-option>
                         </mat-select>
-                    </mat-form-field>
-                    <mat-form-field appearance="outline">
-                        <mat-label>Available Reports</mat-label>
-                        <mat-select formControlName="searchAvailableReportName">
-                            <mat-option *ngFor="let item of AvailableReportNames" [value]="item.ReportConfigItemId">
-                                {{item.ReportName}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>                    
-                    <button [disabled]="loading" matTooltip="search" class="mat-raised-button"
-                        (click)="GetReportConfigItem()">
-                        <mat-icon>search</mat-icon>
-                    </button>
-                </div>
-            </form>
-            <mat-table [dataSource]="dataSource" matSort>
-                <ng-container matColumnDef="ReportName">
-                    <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                            <mat-form-field [style.width.pc]="10" appearance="outline">
-                                <input matInput [value]="element.ReportName" [(ngModel)]="element.ReportName"
-                                    autocomplete="Off" placeholder="" (blur)="onBlur(element)" [minlength]="1"
-                                    [maxlength]="50">
-                            </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                <!--<ng-container matColumnDef="DisplayName">
-                    <mat-header-cell *matHeaderCellDef> Display Name </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-form-field [style.width.pc]="10" appearance="outline">
-                            <input matInput [value]="element.DisplayName" [(ngModel)]="element.DisplayName"
-                                autocomplete="Off" placeholder="" (blur)="onBlur(element)" [minlength]="1"
-                                [maxlength]="50">
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                 <ng-container matColumnDef="Formula">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header> Formula </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-form-field [style.width.pc]="10" appearance="outline">
-                            <textarea matInput [value]="element.Formula" [(ngModel)]="element.Formula"
-                                autocomplete="Off" (blur)="onBlur(element)" [maxlength]="256"></textarea>
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                 <ng-container matColumnDef="TableNames">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header> Table Name </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-form-field [style.width.pc]="10" appearance="outline">
-                            <input matInput [value]="element.TableNames" [(ngModel)]="element.TableNames"
-                                autocomplete="Off" (blur)="onBlur(element)" [maxlength]="50">
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container> -->
-                <!-- <ng-container matColumnDef="ColumnSequence">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header> Sequence </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-form-field [style.width.pc]="4" appearance="outline">
-                            <input type="number" matInput [value]="element.ColumnSequence"
-                                [(ngModel)]="element.ColumnSequence" autocomplete="Off" (blur)="ReSequence(element)"
-                                [max]="100">
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container> -->
-                <ng-container matColumnDef="Active">
-                    <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
-                            [checked]="element.Active==1?true:false">
-                        </mat-checkbox>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Action">
-                    <mat-header-cell *matHeaderCellDef>
-                        <button [disabled]="loading" matTooltip="add new" mat-mini-fab (click)="addnew()">
-                            <mat-icon>add</mat-icon>
-                        </button>
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="loading || Permission=='read' || !element.Action" matTooltip="save"
-                            mat-mini-fab (click)="UpdateOrSave(element)">
-                            <mat-icon>save</mat-icon>
-                        </button>
-                    </mat-cell>
-                </ng-container>
-                <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: DisplayColumns;" class="element-row"></mat-row>
-            </mat-table>
-            <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
+                    </mat-form-field> -->
+            <mat-form-field appearance="outline" [style.width.px]="300">
+                <mat-label>Available Reports</mat-label>
+                <mat-select formControlName="searchAvailableReportName">
+                    <mat-option *ngFor="let item of AvailableReportNames" [value]="item.ReportConfigItemId">
+                        {{item.ReportName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <button [disabled]="loading" matTooltip="search" class="mat-raised-button" (click)="GetReportConfigItem()">
+                <mat-icon>search</mat-icon>
+            </button>
         </div>
-    </div>
+    </form>
+    <mat-table [dataSource]="dataSource" matSort>
+        <ng-container matColumnDef="ReportName">
+            <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+            <mat-cell *matCellDef="let element">
+                <mat-form-field [style.width.pc]="10" appearance="outline">
+                    <input matInput [value]="element.ReportName" [(ngModel)]="element.ReportName" autocomplete="Off"
+                        placeholder="" (blur)="onBlur(element)" [minlength]="1" [maxlength]="50">
+                </mat-form-field>
+            </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="Active">
+            <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
+            <mat-cell *matCellDef="let element">
+                <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
+                    [checked]="element.Active==1?true:false">
+                </mat-checkbox>
+            </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="Action">
+            <mat-header-cell *matHeaderCellDef>
+                <button [disabled]="loading" matTooltip="add new" mat-mini-fab (click)="addnew()">
+                    <mat-icon>add</mat-icon>
+                </button>
+            </mat-header-cell>
+            <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
+                <button [disabled]="loading || Permission=='read' || !element.Action" matTooltip="save" mat-mini-fab
+                    (click)="UpdateOrSave(element)">
+                    <mat-icon>save</mat-icon>
+                </button>
+            </mat-cell>
+        </ng-container>
+        <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: DisplayColumns;" class="element-row"></mat-row>
+    </mat-table>
+    <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
 </div>
