--- a/src/app/modules/student/studentprimaryinfo/studentprimaryinfo.component.html
+++ b/src/app/modules/student/studentprimaryinfo/studentprimaryinfo.component.html
@@ -281,7 +281,7 @@
                 <mat-icon>note_add</mat-icon>Additional Info. & Save
             </ng-template>
             <div style="padding:15px 15px 10px 15px;"><strong>Additional Info.</strong></div>
-            <div class="content" fxLayout="row wrap" fxLayoutGap="100px">
+            <div class="content" fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutGap="100px">
                 <mat-form-field appearance="outline" fxFlex>
                     <mat-label>Last school attended</mat-label>
                     <input formControlName="TransferFromSchool" autocomplete="Off" #Pincode matInput [maxlength]="100">
