--- a/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.scss
+++ b/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.scss
@@ -1,30 +1,21 @@
-.example-container {
-    display: flex;
-    flex-direction: column;
-    max-height: 500px;
-    min-width: 300px;
-  }
-  
   .mat-table {
-    overflow: auto;
+    overflow    : auto;
     //max-height: 500px;
   }
-  mat-form-field{
-      margin-right: 20px;
+
+  .mat-form-field {
+    margin-right: 15px;
+    width       : 99%;
   }
-  mat-header-cell{
-    justify-content: center;
+
+  .mat-column-ClassFeeId,
+  .mat-column-Active,
+  .mat-column-Action {
+    flex: 0 0 100px;
   }
-  mat-cell{
-    display:flex;
-    justify-content: space-around;
-    padding: 5px;
-  }
-  button{
-      outline: none;
-      max-height: 50px;
-  }
-  div{
-    margin-top: 5px;
-    margin-bottom: 5px;
+
+  .mat-column-Amount,
+  .mat-column-FeeName,
+  .mat-column-Month {
+    flex: 0 0 150px;
   }
