--- a/src/app/modules/classes/school-fee-types/school-fee-types.component.html
+++ b/src/app/modules/classes/school-fee-types/school-fee-types.component.html
@@ -53,22 +53,22 @@
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="Active">
-                <mat-header-cell *matHeaderCellDef>Active
+                <mat-header-cell *matHeaderCellDef style="justify-content: center;">Active
                 </mat-header-cell>
-                <mat-cell *matCellDef="let element">
+                <mat-cell *matCellDef="let element" style="justify-content: center;">
                     <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
                         [checked]="element.Active==1?true:false">
                     </mat-checkbox>
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="Action">
-                <mat-header-cell *matHeaderCellDef>
+                <mat-header-cell *matHeaderCellDef style="justify-content: center;">
                     <button [disabled]="loading || Permission=='read'" matTooltip="add new" mat-mini-fab
                         (click)="AddNew()">
                         <mat-icon>add</mat-icon>
                     </button>
                 </mat-header-cell>
-                <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
+                <mat-cell *matCellDef="let element" style="justify-content: center;">
                     <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="save" mat-mini-fab
                         (click)="UpdateOrSave(element)">
                         <mat-icon>save</mat-icon>
@@ -76,7 +76,7 @@
                 </mat-cell>
             </ng-container>
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;" style="display: flex;align-items: baseline;" class="element-row"></mat-row>
         </mat-table>
         <div style="width:100%;background-color: lightgray;font-size: medium;padding: 10px;"> Below variables can be
             applied
