--- a/src/app/modules/classes/feedefinition/feedefinition.component.scss
+++ b/src/app/modules/classes/feedefinition/feedefinition.component.scss
@@ -5,7 +5,7 @@ mat-form-field{
 .mat-column-FeeDefinitionId{
     flex:0 0 60px;
 }
-.mat-column-Active,.mat-column-Action{
+.mat-column-Active,.mat-column-Action,.mat-column-AmountEditable{
     flex:0 0 100px;
 }
 .mat-column-FeeName,.mat-column-FeeCategoryId{
