--- a/src/app/modules/student/addstudentclass/addstudentclass.component.html
+++ b/src/app/modules/student/addstudentclass/addstudentclass.component.html
@@ -35,7 +35,7 @@
                             {{p.MasterDataName}}
                         </mat-option>
                     </mat-select>
-                    <span class="text-danger" *ngIf="f.SectionId.touched && f.SectionId.hasError('required')">Class is
+                    <span class="text-danger" *ngIf="f.SectionId.touched && f.SectionId.hasError('required')">Section is
                         required.</span>
                 </mat-form-field>
             </mat-grid-tile>
@@ -48,7 +48,7 @@
                             {{p.FeeTypeName}}
                         </mat-option>
                     </mat-select>
-                    <span class="text-danger" *ngIf="f.FeeTypeId.touched && f.FeeTypeId.hasError('required')">Class is
+                    <span class="text-danger" *ngIf="f.FeeTypeId.touched && f.FeeTypeId.hasError('required')">Fee type is
                         required.</span>
                 </mat-form-field>
             </mat-grid-tile>           
