--- a/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.html
+++ b/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.html
@@ -26,6 +26,12 @@
             </mat-select>
         </mat-form-field>
         <mat-form-field appearance="outline" style="width: 200px;">
+            <mat-label>Month Year</mat-label>
+            <mat-select formControlName="searchMonth">
+                <mat-option *ngFor="let item of Months" [value]="item.val">{{item.MonthName}}</mat-option>
+            </mat-select>
+        </mat-form-field>
+        <!-- <mat-form-field appearance="outline" style="width: 200px;">
             <mat-label>Fee name</mat-label>
             <mat-select formControlName="FeeDefinitionId" #FeeName>
                 <mat-option value="0">---</mat-option>
@@ -33,7 +39,7 @@
                     {{p.FeeName}}
                 </mat-option>
             </mat-select>
-        </mat-form-field>
+        </mat-form-field> -->
         <button [disabled]="loading" class="mat-raised-button" (click)="GetClassFee()">
             <mat-icon>search</mat-icon>
         </button><br>
@@ -60,16 +66,12 @@
                 </mat-form-field>
             </mat-cell>
         </ng-container>      
-        <ng-container matColumnDef="Month">
+        <!-- <ng-container matColumnDef="Month">
             <mat-header-cell *matHeaderCellDef>Month</mat-header-cell>
             <mat-cell *matCellDef="let element">
-                <mat-form-field appearance="outline">
-                    <mat-select [(ngModel)]="element.Month" [value]="element.Month" (selectionChange)="onBlur(element)">
-                        <mat-option *ngFor="let item of Months" [value]="item.val">{{item.MonthName}}</mat-option>
-                    </mat-select>
-                </mat-form-field>
+                {{element.MonthName}}
             </mat-cell>
-        </ng-container>
+        </ng-container> -->
         <ng-container matColumnDef="Active">
             <mat-header-cell *matHeaderCellDef style="justify-content: center;">Active </mat-header-cell>
             <mat-cell *matCellDef="let element" style="justify-content: center;">
@@ -95,3 +97,4 @@
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
+    <mat-paginator [pageSizeOptions]="[5,10,20]"></mat-paginator>
